Query event types: add http handler (#73)
* update setup instructions of web and server

* add http handler to query event types

* remove envid

* Query event types: implement repo (#74)

* wip

* implement repo and add integration tests

* add component test (#75)
