# server/cmd/service/main.go
@@ -133,6 +133,9 @@ func run(logger *logs.Logger) error {
 			// Applications
 			AllApplications: observability.NewQueryDecorator[query.AllApplications, query.Paginated[[]domain.Application]](query.NewAllApplicationsHandler(applicationRepo), logger),
 			Application:     observability.NewQueryDecorator[query.Application, *domain.Application](query.NewApplicationHandler(applicationRepo), logger),
+
+			// Event types
+			AllEventTypes: observability.NewQueryDecorator[query.AllEventTypes, query.Paginated[[]domain.EventType]](query.NewAllEventTypesHandler(eventTypeRepo), logger),
 		},
 	}
 
