# server/internal/adapters/psql/event_type.go
@@ -5,9 +5,12 @@ import (
 	"fmt"
 
 	"github.com/subscribeddotdev/subscribed/server/internal/adapters/models"
+	"github.com/subscribeddotdev/subscribed/server/internal/app/query"
 	"github.com/subscribeddotdev/subscribed/server/internal/domain"
+	"github.com/subscribeddotdev/subscribed/server/internal/domain/iam"
 	"github.com/volatiletech/null/v8"
 	"github.com/volatiletech/sqlboiler/v4/boil"
+	"github.com/volatiletech/sqlboiler/v4/queries/qm"
 )
 
 type EventTypeRepository struct {
@@ -38,4 +41,53 @@ func (e EventTypeRepository) Insert(ctx context.Context, eventType *domain.Event
 	}
 
 	return nil
+}
+
+func (e EventTypeRepository) FindAll(
+	ctx context.Context,
+	orgID iam.OrgID,
+	pagination query.PaginationParams,
+) (query.Paginated[[]domain.EventType], error) {
+	total, err := models.EventTypes(models.EventTypeWhere.OrgID.EQ(orgID.String())).Count(ctx, e.db)
+	if err != nil {
+		return query.Paginated[[]domain.EventType]{}, fmt.Errorf("error counting event types: %v", err)
+	}
+
+	rows, err := models.EventTypes(
+		models.EventTypeWhere.OrgID.EQ(orgID.String()),
+		qm.Offset(mapPaginationParamsToSqlOffset(pagination)),
+		qm.Limit(pagination.Limit()),
+		qm.OrderBy("created_at DESC"),
+	).All(ctx, e.db)
+	if err != nil {
+		return query.Paginated[[]domain.EventType]{}, fmt.Errorf("error querying event types: %v", err)
+	}
+
+	return query.Paginated[[]domain.EventType]{
+		Total:       int(total),
+		PerPage:     len(rows),
+		CurrentPage: pagination.Page(),
+		TotalPages:  getPaginationTotalPages(total, pagination.Limit()),
+		Data:        mapRowsToEventTypes(rows),
+	}, nil
+}
+
+func mapRowsToEventTypes(rows []*models.EventType) []domain.EventType {
+	eventTypes := make([]domain.EventType, len(rows))
+	for i, row := range rows {
+		eventType := domain.UnMarshallEventType(
+			domain.EventTypeID(row.ID),
+			row.OrgID,
+			row.Name,
+			row.Description.String,
+			row.Schema.String,
+			row.SchemaExample.String,
+			row.CreatedAt,
+			row.ArchivedAt.Ptr(),
+		)
+
+		eventTypes[i] = *eventType
+	}
+
+	return eventTypes
 }
